5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1601_1802.log
== TEST (2019-04-10 22:57:33) 
-- CODE:
import math
from numpy.random import *
vida = int(input("digite vida"))
D1 = randint(1, 20, size = 6000)
D2 = randint(1, 20, size = 6000)
print(D1)
print(D2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy.random import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:58:10) 
-- CODE:
import math
from numpy.random import *
#vida = int(input("digite vida"))
D1 = randint(1, 20, size = 1)
D2 = randint(1, 20, size = 1)
print(D1)
print(D2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy.random import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:59:53) 
-- CODE:
import math
from numpy.random import *
#vida = int(input("digite vida"))
D1 = randint(1, 20, size = 4)
D2 = randint(1, 20, size = 1)
print(D1)
print(D2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy.random import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:06:03) 
-- CODE:
import math
from numpy.random import *
#vida = int(input("digite vida"))
D1 = randint(1, 20, size = 1)
D2 = randint(1, 20, size = 1)
dano = (sqrt(5*D1))+(pi**(D2/3))

print(dano)
#print()


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy.random import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:06:49) 
-- CODE:
import math import *
from numpy.random import *
#vida = int(input("digite vida"))
D1 = randint(1, 20, size = 1)
D2 = randint(1, 20, size = 1)
dano = (sqrt(5*D1))+(pi**(D2/3))

print(dano)
#print()


-- ERROR:
File "XXXX", line 1
    import math import *
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:07:17) 
-- CODE:
from math import *
from numpy.random import *
#vida = int(input("digite vida"))
D1 = randint(1, 20, size = 1)
D2 = randint(1, 20, size = 1)
dano = (sqrt(5*D1))+(pi**(D2/3))

print(dano)
#print()


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy.random import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:08:03) 
-- CODE:
from math import *
from numpy.random import *
#vida = int(input("digite vida"))
D1 = randint(1, 20, size = 1)
D2 = randint(1, 20, size = 1)
dano = (sqrt(5*D1))+(pi**(D2/3))

print(int(dano))
#print()


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy.random import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:09:02) 
-- CODE:
from math import *
from numpy.random import *
vida = int(input("digite vida"))
D1 = 8#randint(1, 20, size = 1)
D2 = 4#randint(1, 20, size = 1)
dano = (sqrt(5*D1))+(pi**(D2/3))

print(int(dano))
#print()


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy.random import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:10:08) 
-- CODE:
from math import *
from numpy.random import *
vida = int(input("digite vida"))
D1 = 8#randint(1, 20, size = 1)
D2 = 4#randint(1, 20, size = 1)
dano = (sqrt(5*D1))+(pi**(D2/3))

print(dano)
#print()


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy.random import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:12:47) 
-- CODE:
from math import *
from numpy.random import *
vida = int(input("digite vida"))
D1 = 8#randint(1, 20, size = 1)
D2 = 4#randint(1, 20, size = 1)
dano = (sqrt(5*D1))+(pi**(D2/3))

print(vida-dano)
#print()


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy.random import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:13:05) 
-- CODE:
from math import *
from numpy.random import *
vida = int(input("digite vida"))
D1 = 8#randint(1, 20, size = 1)
D2 = 4#randint(1, 20, size = 1)
dano = (sqrt(5*D1))+(pi**(D2/3))

print(vida-int(dano))
#print()


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy.random import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:14:40) 
-- CODE:
from math import *
from numpy.random import *
vida = int(input("digite vida"))
D1 = randint(1, 20, size = 1)
D2 = randint(1, 20, size = 1)
dano = (sqrt(5*D1))+(pi**(D2/3))
print(vida-int(dano))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy.random import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:15:40) 
-- CODE:
from math import *
from numpy.random import *
vida = int(input("digite vida"))
D1 = randint(1, 20, size = 1)
D2 = randint(1, 20, size = 1)
dano = (sqrt(5*D1))+(pi**(D2/3))
print(vida-int(dano))
print(dano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy.random import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:15:53) 
-- CODE:
from math import *
from numpy.random import *
vida = int(input("digite vida"))
D1 = randint(1, 20, size = 1)
D2 = randint(1, 20, size = 1)
dano = (sqrt(5*D1))+(pi**(D2/3))
print(vida-int(dano))
print(dano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy.random import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:16:06) 
-- CODE:
from math import *
from numpy.random import *
vida = int(input("digite vida"))
D1 = randint(1, 20, size = 1)
D2 = randint(1, 20, size = 1)
dano = (sqrt(5*D1))+(pi**(D2/3))
print(vida-int(dano))
print(dano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy.random import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:17:08) 
-- CODE:
from math import *
from numpy.random import *
vida = int(input("digite vida"))
D1 = 20#randint(1, 20, size = 1)
D2 = 20#randint(1, 20, size = 1)
dano = (sqrt(5*D1))+(pi**(D2/3))
print(vida-int(dano))
print(dano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy.random import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:17:42) 
-- CODE:
from math import *
from numpy.random import *
vida = int(input("digite vida"))
D1 = randint(1, 20, size = 1)
D2 = randint(1, 20, size = 1)
dano = (sqrt(5*D1))+(pi**(D2/3))
print(vida-int(dano))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy.random import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:17:51) 
-- CODE:
from math import *
from numpy.random import *
vida = int(input("digite vida"))
D1 = randint(1, 20, size = 1)
D2 = randint(1, 20, size = 1)
dano = (sqrt(5*D1))+(pi**(D2/3))
print(vida-int(dano))

-- EXECUTION TIME:
0.453516
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
177
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
246
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
394
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:48:09) 
-- CODE:
from math import *
#from numpy.random import *
vida = int(input("digite vida"))
D1 = int(input("dado 1"))#randint(1, 20, size = 1)
D2 = int(input("dado 2"))#randint(1, 20, size = 1)
dano = (sqrt(5*D1))+(pi**(D2/3))
print(vida-int(dano))

-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:48:22) 
-- CODE:
from math import *
#from numpy.random import *
vida = int(input("digite vida"))
D1 = int(input("dado 1"))#randint(1, 20, size = 1)
D2 = int(input("dado 2"))#randint(1, 20, size = 1)
dano = (sqrt(5*D1))+(pi**(D2/3))
print(vida-int(dano))

-- EXECUTION TIME:
0.160439
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
